[package]
name = "deterministic-bloom-benches"
version = "0.1.0"
publish = false
edition = "2021"
authors = ["Brooklyn Zelenka <hello@brooklynzelenka.com>"]

[dependencies]
deterministic-bloom = { path = "../deterministic-bloom", version = "0.1", features = ["test_utils"] }

[dev-dependencies]
criterion = { version = "0.4", default-features = false }

[[bench]]
name = "a_benchmark"
harness = false
