[package]
name = "deterministic-bloom-benches"
version = "0.1.0"
publish = false
edition = "2021"
authors = ["Brooklyn Zelenka <hello@brooklynzelenka.com>"]

[dependencies]
deterministic-bloom = { path = "../deterministic-bloom", version = "0.1", features = ["test_utils"] }
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.4", default-features = false }

[[bench]]
name = "bloom_filter_benchmark"
harness = false
