[package]
name = "deterministic-bloom-wasm"
version = "0.1.0"
description = "Wasm bindings for the deterministic-bloom crate."
keywords = []
categories = []
include = ["/src", "README.md", "LICENSE"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/deterministic-bloom-wasm"
repository = "https://github.com/wnfs-wg/deterministic-bloom/tree/main/deterministic-bloom-wasm"
authors = ["Brooklyn Zelenka <hello@brooklynzelenka.com>"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }
derive_more = "0.99"
deterministic-bloom = { path = "../deterministic-bloom", version = "0.1" }
js-sys = { version = "0.3", optional = true }
once_cell = "1.16"
thiserror = "1.0"
tracing = "0.1"
wasm-bindgen = { version = "0.2", optional = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["js"]
full = ["js", "web"]
js = [
  "console_error_panic_hook",
  "js-sys",
  "wasm-bindgen",
  "wasm-bindgen-futures"
]
web = ["web-sys"]

[profile.release]
lto = true
