[package]
name = "deterministic-bloom"
version = "0.1.0"
description = ""
keywords = []
categories = []
license = "Apache-2.0"
include = ["/src", "README.md", "LICENSE"]
readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/deterministic-bloom"
repository = "https://github.com/expede/deterministic-bloom/tree/main/deterministic-bloom"
authors = ["Brooklyn Zelenka <hello@brooklynzelenka.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
proptest = { version = "1.0", optional = true }
tracing = "0.1"

[dev-dependencies]
proptest = "1.0"

[features]
default = []
test_utils = ["proptest"]
