[package]
name = "deterministic-bloom"
version = "0.1.0"
description = "A deterministic Bloom filter with support for saturation. Suitable for distributed use cases and as a cryptographic primitive."
keywords = ["bloom"]
categories = []
license = "Apache-2.0"
include = ["/src", "README.md", "LICENSE"]
readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/deterministic-bloom"
repository = "https://github.com/expede/deterministic-bloom/tree/main/deterministic-bloom"
authors = ["Philipp Krüger <philipp@fission.codes>", "Stephen Akinyemi <appcypher@fission.codes>", "Brooklyn Zelenka <brooklyn@fission.codes>"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
proptest = { version = "1.0", optional = true }
tracing = "0.1"

[dev-dependencies]
proptest = "1.0"

[features]
default = []
test_utils = ["proptest"]
