[package]
name = "deterministic-bloom"
version = "0.1.0"
description = "A deterministic Bloom filter with support for saturation. Suitable for distributed use cases and as a cryptographic primitive."
keywords = ["bloom"]
categories = []
license = "Apache-2.0"
include = ["/src", "README.md", "LICENSE"]
readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/deterministic-bloom"
repository = "https://github.com/wnfs-wg/deterministic-bloom/tree/main/deterministic-bloom"
authors = ["Philipp Krüger <philipp@fission.codes>", "Stephen Akinyemi <appcypher@fission.codes>", "Brooklyn Zelenka <brooklyn@fission.codes>"]

[lib]
path = "src/lib.rs"

[dependencies]
bitvec = { version = "1.0", features = ["serde"] }
miette = "5.5"
proptest = { version = "1.0", optional = true }
rand_core = "0.6"
serde = { version = "1.0", features = ["rc"] }
thiserror = "1.0"
tracing = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
libipld = { version = "0.15", features = ["serde-codec"] }
proptest = "1.0"
rand = "0.8"
test-strategy = "0.2"

[features]
default = []
test_utils = ["proptest"]
